# happy-crud

./: .gitignore  Cargo.toml  README.md  build.bat  log4rs.yml
config/: default.toml
resource/: postgre.sql  postman_export.json
src/: config.rs  main.rs
src/entity/: mod.rs  person.rs  prelude.rs
src/model/: file.rs  mod.rs  page.rs  person.rs
src/server/: db_center.rs  file.rs  mod.rs  person.rs
src/utils/: mod.rs  ws_error.rs  ws_response.rs
